--- a/index.html
+++ b/index.html
@@ -106,6 +106,6 @@ p {
 <p class="p1">Drag the papers to move!</p>
 </div>
 <!-- javascript file -->
-  <script  src="script.js"></script>
+  <script  src="js.js"></script>
 </body>
 </html>
