--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@ p {
 <div class="paper">
 <p class="p1">Drag the papers to move!</p>
 </div>
+  <form>
+<div class="wrapper">
+  <input type="checkbox" id="ck1" onClick="check()"/>
+  <label for="ck1">I</label>
+  <input type="checkbox" id="ck2" onClick="check()"/>
+  <label for="ck2">love</label>
+  <input type="checkbox" id="ck3" onClick="check()"/>
+  <label for="ck3">you</label>
+  <span>(Click on words)</span>
+</div>
+</form>
 <!-- javascript file -->
   <script  src="js.js"></script>
 </body>
