--- a/index.html
+++ b/index.html
@@ -76,31 +76,30 @@ p {
 </head>
 <body>
 
-<!-- Developed by Saravanan  -->
 <div class="paper heart">
 </div>
 <div class="paper image">
-  <p> and I fallen in</p>
-    <p>Love with You 😍 </p>
+  <p> I fall in love</p>
+    <p> with you everyday 😍 </p>
    <img src="https://cdn.discordapp.com/attachments/767317116353249280/1207024691672260649/1000015243-01.jpg?ex=65de2457&is=65cbaf57&hm=98ffe3f3a0f8efb1ea675f0a97b2602d44213a61c49e0556ec7d6f1736e745ac&" />
 </div>
 <div class="paper image">
-  <p</p>
+  <p You have all my heart </p>
   <img src="https://cdn.discordapp.com/attachments/767317116353249280/1207024692322504774/1000008961-01.jpg?ex=65de2458&is=65cbaf58&hm=6fb008451be64cc267db5d533be2b5b7588432a30e2abb196d5c15f14abad6a8&
 " />
 </div>
 <div class="paper image">
-  <p>How can be </p>
-   <p> someone so cute ❤️ </p>
-  <img src="https://cdn.discordapp.com/attachments/767317116353249280/1207024964654342194/IMG-20231109-WA0004.jpg?ex=65de2499&is=65cbaf99&hm=91c445db8405afd287f0cf67227111f5a38a16d7edaae1d8144fb87bef21f9f1&" />
+  <p>How can someone </p>
+   <p> be so cute ❤️ </p>
+  <img src="https://cdn.discordapp.com/attachments/767317116353249280/1207027364543070288/1000029193-01.jpg?ex=65de26d5&is=65cbb1d5&hm=dc41930402b5beb4b35ee9811c828b51fbd2d92da10cc5a1d17f959f9380b456&" />
 </div>
 <div class="paper red">
-<p class="p1"> and My Favorite</p>
-<p class="p2">Person 😍</p>
+<p class="p1"> I love you</p>
+<p class="p2">innna ka power 23 saara 😍</p>
 </div>
 <div class="paper">
-<p class="p1">You are Cute </p>
-  <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+<p class="p1">Happy Valentines Day </p>
+  <p class="p1">Baby <span style="color: red !important;">❤️</span></p>
 </div>
 <div class="paper">
 <p class="p1">Drag the papers to move!</p>
