--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@ p {
 </div>
 <div class="paper red">
 <p class="p1"> I love you</p>
-<p class="p2">innna ka power 23 saara 😍</p>
+<p class="p2">so much 😍</p>
 </div>
 <div class="paper">
 <p class="p1">Happy Valentines Day </p>
-  <p class="p1">Baby <span style="color: red !important;">❤️</span></p>
+  <p class="p1">baby <span style="color: red !important;">❤️</span></p>
 </div>
 <div class="paper">
 <p class="p1">Drag the papers to move!</p>
